--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <button class="btn" @click="formattedHardReset">硬重置</button>
             <button class="btn" @click="exportCopy">导出</button>
             <button class="btn" @click="exportFile">导出为文件</button>
-            <!-- <button class="btn" @click="importSave">导入</button> -->
+            <button class="btn" @click="importText">导入</button>
             <button class="btn" @click="importFile">以文件导入</button>
         </div>
         <div v-if="player.currentPage == 3" class="text-center">
